<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PdfReaderConverter</string>
    <string name="title">Pdf Converter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_title"><![CDATA[Pdf Reader && Converter]]></string>
    <string name="app_title">Image to Pdf</string>
    <string name="click_back_again_to_exit">Click BACK again to exit</string>
    <string name="home_files">Home Files</string>
    <string name="pdf_files">PDF Files</string>
    <string name="import_from_camera">Import from Camera</string>
    <string name="import_from_gallery">Import from Gallery</string>
    <string name="feedback_email">futuretech582@gmail.com</string>
    <string name="share_app">Share</string>
    <string name="ad_attribution" translatable="false">AD</string>
    <string name="rate_us_app">Rate Us</string>
    <string name="give_feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app_text">Download this great app at: https://play.google.com/store/apps/details?id=</string>
    <string name="feedback_subject">Pdf Converter Feedback</string>
    <string name="privacy_policy_url">https://futuretechprivacypolicy.blogspot.com/p/privacy-policy.html</string>
    <string name="pdfscanner_01264141">pdfscanner_01264141</string>
    <string name="_13_aug_21_9_36">_13_aug_21_9_36</string>
    <string name="_1_11_mb">_1_11_mb</string>
    <string name="search_here">Search Here...</string>
    <string name="file_already_exist">File already exist</string>
    <string name="delete_confirm">Delete Confirmation</string>
    <string name="delete_msg">Are you sure You want to delete?</string>
    <string name="enter_name_here">enter name here...</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="rename_document">Rename File</string>
    <string name="delete_document">Delete Document</string>
    <string name="deleting">Deleting</string>
    <string name="nothing_to_show_here">Nothing</string>
    <string name="nothing_found">No Item</string>
    <string name="password">Password Protected</string>
    <string name="enter_password_here">enter password here…</string>
    <string name="ok">OK</string>
    <string name="incorrect_password">Incorrect_password</string>
    <string name="apply">Apply</string>
    <string name="please_select_image">Please select image</string>
    <string name="gallery_picker">Gallery Picker</string>
    <string name="import_text">Import</string>
    <string name="batch_mode">Batch Mode</string>
    <string name="batch_mode_enable">Batch mode enable</string>
    <string name="single_mode_enable">Single mode enable</string>
    <string name="rationale_camera">This app needs access to your camera permission.</string>
    <string name="processing">Processing…</string>
    <string name="crop">Crop</string>
    <string name="filter">Filter</string>
    <string name="signature">Sign</string>
    <string name="signature_text">Signature</string>
    <string name="text">Text</string>
    <string name="save">Save</string>
    <string name="rotate">Rotate</string>
    <string name="flip">Flip</string>
    <string name="fit_image">Fit Image</string>
    <string name="original">Origina</string>
    <string name="alert">Alert</string>
    <string name="remove_image">Are you sure you want to remove this image?</string>
    <string name="remove">REMOVE</string>
    <string name="draw_something">Please Draw Something</string>
    <string name="save_as_Pdf">Save PDF</string>
    <string name="pdf">PDF</string>
    <string name="select_quality">Select Quality</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="regular">Regular</string>
    <string name="max">Max</string>
    <string name="enter_edt_name">Please enter name</string>
    <string name="pdf_dir">pdf_Files</string>

    <string name="remote_topic">image_to_pdf</string>


</resources>