<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/_10sdp"
        android:layoutDirection="ltr"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.PopupOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iVBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/tvToolbarTitle"
            style="@style/TextViewStyle.Regular.14sdp"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:ellipsize="marquee"
            android:paddingVertical="@dimen/_5sdp"
            android:singleLine="true"
            android:text="@string/title"
            android:textColor="@color/white"
            android:visibility="gone"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/iVSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_search_icon" />

        <ImageView
            android:id="@+id/iVShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_share_icon" />

        <ImageView
            android:id="@+id/iVDropDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:padding="@dimen/_5sdp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_drop_down" />

        <ImageView
            android:id="@+id/iVFlashMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:padding="@dimen/_10sdp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_flash_off" />

        <TextView
            android:id="@+id/tvApply"
            style="@style/TextViewStyle.Regular.14sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:singleLine="true"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:visibility="gone" />


    </androidx.appcompat.widget.Toolbar>

</layout>
